data/derived/fa15/progs/unify/prog2058.ml.out
Characters 60-68:
  else digits n;;
       ^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
